--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>下一代集成式类无状态模拟终端 - Spirtuality Assistant Shell</title>
     <link rel="Shortcut Icon" href="images/docico.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="css/style1.css" />
 </head>
-<link rel="stylesheet" href="css/style1.css" />
+
 
 <body>
     <div id="main">
@@ -41,6 +42,7 @@
                 </ul>
             </div>
         </div>
+
         <div id="banner">
             <div class="masklayer"></div>
             <div class="bannerfontgroup">
@@ -54,6 +56,7 @@
             </div>
             <div class="ckbutton">了解更多</div>
         </div>
+
         <div id="container">
             <div class="producefeaturesup">
                 <div id="producefeatures">
@@ -79,6 +82,7 @@
                     </div>
                 </div>
             </div>
+
             <div id="producedetail">
                 <h1>产品特点</h1>
                 <p>借助全新的Spirtuality Assistant Shell您可以。</p>
@@ -130,18 +134,29 @@
                     </div>
                 </div>
             </div>
+
             <div class="howtouseup"></div>
+
             <div id="howtouse">
                 <div class="howtousehead">
                     <h1>如何使用</h1>
-                    <p>Spirtuality Assistant Shell易于安装和使用</p>
+                    <p>只需几步快速开始</p>
                     <hr>
                 </div>
                 <!-- <h1>如何使用</h1> -->
-                <div class="howtousecontent"></div>
-
+                <div class="howtousecontent">
+                    <div class="howtousecontentblock">
+                        <img src="images/phone.jpg">
+                        <div class="howtousecontentblockright">
+                            <h4><span>别担心</span><br /><span>Spirtuality Assistant </span>Shell<br />易于安装和使用</h4>
+                            <p>使用我们提供的标准化安装程序安装并通过桌面快捷方式启动，一切尽在您的掌握。</p>
+                        </div>
+                    </div>
+                </div>
             </div>
+
             <div class="aboutusup"></div>
+
             <div id="aboutus">
                 <h1>关于我们</h1>
                 <p>AYSH STUDIO成立于2016年,成员来自全国各地。</p>
@@ -155,6 +170,7 @@
                     <div class="aboutusbottom"><img src="images/aboutusbottom.png"></div>
                 </div>
             </div>
+
             <div id="joinus">
                 <h1>加入我们</h1>
                 <p>在AYSH STUDIO创造您的价值。</p>
@@ -222,9 +238,11 @@
                     </div>
                 </div>
             </div>
+
         </div>
 
         <div class="footerup"></div>
+
         <div id="footer">
             <div class="line"></div>
             <p class="footertext">AYSHSTUDIO ©. All rights reserved.</p>
