--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <!-- <li><a href="#">如何使用</a></li> -->
                     <li><a href="#howtouse">使用帮助</a></li>
                     <li><a href="#aboutus">关于我们</a></li>
-                    <li><a href="#footer">加入我们</a></li>
+                    <li><a href="#joinus">加入我们</a></li>
                     <li><a href="#"> <svg t="1609502212718" class="icon" viewBox="0 0 1024 1024" version="1.1"
                                 xmlns="http://www.w3.org/2000/svg" p-id="1178" width="20" height="20">
                                 <path
@@ -158,9 +158,11 @@
             <div class="aboutusup"></div>
 
             <div id="aboutus">
-                <h1>关于我们</h1>
-                <p>AYSH STUDIO成立于2016年,成员来自全国各地。</p>
-                <hr>
+                <div class="aboutushead">
+                    <h1>关于我们</h1>
+                    <p>AYSH STUDIO成立于2016年,成员来自全国各地。</p>
+                    <hr>
+                </div>
                 <div class="aboutuspicgroup">
                     <div class="aboutusleft"><img src="images/aboutusright.jpg"></div>
                     <div class="aboutusright">
@@ -170,6 +172,8 @@
                     <div class="aboutusbottom"><img src="images/aboutusbottom.png"></div>
                 </div>
             </div>
+
+            <div class="joinusup"></div>
 
             <div id="joinus">
                 <h1>加入我们</h1>
